# quic-parse-csv

./: .env  .gitignore  README.md  check.py  check2.py  check3.py  check3_error.txt  check4.py  check_leakage.py  config.py  csv_to_md.py  label_and_merge.py  main.py  merge_csv.py  output.txt  pcap_to_csv.py  plot_comparison.py  preprocess.sh  pyproject.toml  split_dataset.py  train_anomaly_models.py  train_models.py
dataset/1/: test.csv  train.csv  valid.csv
dataset/10/: test.csv  valid.csv
dataset/11/: test.csv  valid.csv
dataset/12/: test.csv  valid.csv
dataset/13/: test.csv  valid.csv
dataset/14/: test.csv  valid.csv
dataset/15/: test.csv  valid.csv
dataset/16/: test.csv  valid.csv
dataset/17/: test.csv  valid.csv
dataset/18/: test.csv  valid.csv
dataset/19/: test.csv  valid.csv
dataset/2/: test.csv  train.csv  valid.csv
dataset/20/: test.csv  valid.csv
dataset/21/: test.csv  valid.csv
dataset/22/: test.csv  valid.csv
dataset/23/: test.csv  valid.csv
dataset/24/: test.csv  valid.csv
dataset/25/: test.csv  valid.csv
dataset/3/: test.csv  (+1 more)
docs/: anomaly-analysis-summary.md  anomaly-autoencoder-latent.md  anomaly-autoencoder.md  anomaly-benchmark-comparison.md  anomaly-detection-plan.md  anomaly-ecod.md  anomaly-hbos.md  anomaly-isolation-forest.md  anomaly-pca-reconstruction.md
scripts/: anomaly_benchmark_common.py  anomaly_benchmark_models.py  run_anomaly_benchmarks.py  train_anomaly_autoencoder.py  train_anomaly_ecod.py  train_anomaly_hbos.py  train_anomaly_isolation_forest.py  train_anomaly_pca.py  visualize_autoencoder_latent.py
(+4644 files in other folders)
