[project]
name = "quic-parse-csv"
version = "0.1.0"
description = "QUIC pcap 파일 분석 및 통계 생성 도구"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyshark>=0.6",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.7.2",
    "lightgbm>=4.6.0",
    "xgboost>=3.1.3",
    "joblib>=1.5.3",
    "tabulate>=0.9.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]
